--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+
+    // design
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
 }
