--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.malibin.boostcourseace"
-        minSdkVersion 21
+        minSdkVersion 24
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -34,4 +34,6 @@ dependencies {
 
     // design
     implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'com.android.support:design:28.0.0'
+
 }
