--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".review.more.ReviewMoreActivity"></activity>
+        <activity android:name=".movie.select.MovieSelectActivity"></activity>
+        <activity android:name=".review.more.ReviewMoreActivity" />
         <activity android:name=".review.write.ReviewWriteActivity" />
-        <activity android:name=".moviedetail.MovieDetailActivity">
+        <activity android:name=".movie.detail.MovieDetailActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
