--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".movie.select.MovieSelectActivity"></activity>
-        <activity android:name=".review.more.ReviewMoreActivity" />
-        <activity android:name=".review.write.ReviewWriteActivity" />
-        <activity android:name=".movie.detail.MovieDetailActivity">
+        <activity android:name=".movie.select.MovieSelectActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".review.more.ReviewMoreActivity" />
+        <activity android:name=".review.write.ReviewWriteActivity" />
+        <activity android:name=".movie.detail.MovieDetailActivity">
+
         </activity>
     </application>
 
