PJT4. 요구사항 제대로 안읽고 액티비티였던거 부랴부랴 프래그먼트로 전환. 상세보기 버튼 누르면 그에 해당하는 프래그먼트로 전환되는거까지 완료.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,18 +9,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".movie.select.MovieSelectActivity">
+        <activity android:name=".movie.MovieHomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".review.more.ReviewMoreActivity" />
-        <activity android:name=".review.write.ReviewWriteActivity" />
-        <activity android:name=".movie.detail.MovieDetailActivity">
+        <activity android:name=".movie.select.MovieSelectActivity">
 
         </activity>
+        <activity android:name=".review.more.ReviewMoreActivity" />
+        <activity android:name=".review.write.ReviewWriteActivity" />
+        <activity android:name=".movie.detail.MovieDetailActivity"></activity>
     </application>
 
 </manifest>
