--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,10 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
 
+    // network
+    implementation 'com.android.volley:volley:1.1.0'
+
+
+    implementation 'com.google.code.gson:gson:2.8.5'
+
 }
